# Kola

./: .gitignore  CMakeLists.txt  README.md  flash_utils.h  kola.cpp  memmap_custom.ld
libs/persistent-storage/: flash_utils.h  memmap_custom.ld
src/: CMakeLists.txt
src/kola-server/: CMakeLists.txt  kola-server.cpp
